# multiple_agents

jarvis/: TEACH.md  main.py  models.yaml  pyproject.toml  scheduler_runner.py
jarvis/agents/: approval_agent.py  caption_agent.py  lead_agent.py  onboarding_agent.py  payment_agent.py  posting_agent.py  registry.py  strategy_agent.py
jarvis/configs/: model_params.py  model_params.yaml
jarvis/core/: hooks.py  retry.py  state.py
jarvis/core/hub/: orchestrator.py
jarvis/core/llm/: router.py
jarvis/core/spokes/: base.py
jarvis/data/clients/: novaedge-marketing.json
jarvis/data/sessions/: 00c27c1e-08fb-4ab5-886e-c76f75d259ba.json  0cd57430-bd50-4292-a2fc-e962233e3c56.json  1160706b-4318-4028-af27-fdadbe5f6f06.json  161d9ac2-9a58-4dfe-9794-ffdc3b050d37.json  2be9c815-837f-41b6-8d20-f1fd608eb32d.json  2ea4be70-e3a2-4d9e-bd2f-9f5158d15e37.json  464abb2e-d84a-48a1-aef1-faf075b574c3.json  4b32c113-ea9a-4b5e-8f27-7eda4a40d402.json  5c6d5d49-1bb3-45f4-8046-f3bf3b48b8c9.json  75fab891-1d8b-4f7d-8d23-e009d88ff0f7.json  7644e2f2-8812-4953-911a-cc77058a617b.json  765ec9a9-9d2f-4d00-86e4-d6f7766efd00.json  7bb7ef5e-b0f8-4f72-8c92-d3014c2c3e03.json  7cb8fc8f-0088-424e-9478-a66f88a16573.json  8b63195e-98bb-4098-baca-9eacdcfb1436.json  96010005-7fe9-498c-bab0-3c7d5024225a.json  (+7 more)
jarvis/interfaces/: whatsapp.py
jarvis/prompts/: __init__.py  approval_agent.md  caption_agent.md  hub.md  lead_agent.md  payment-nudge_agent.md  posting_agent.md  strategy_agent.md
jarvis/tools/: client_store.py  lead_store.py  meta_posting.py  scheduler.py  search.py  whatsapp.py
